# Koel

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  THIRD_PARTY.md  docker-compose.yml  pyproject.toml
.github/workflows/: appetite-backfill.yml  ci.yml  cse-api-docs-pages.yml  cse-api-docs-probe.yml  macro-tick.yml  market-tick.yml  ml-cpu-exhaust.yml  ml-live-shadow.yml  ml-qlib-challengers.yml  ml-self-learn.yml  ml-train-v2.yml  path-backfill.yml  pdf-metrics-drain.yml  score-signals.yml  sector-notices-backfill.yml
branding/: README.md
chime/: __main__.py  bot.py  circuit.py  config.py  disclosures_backfill.py  dividends.py  domain.py  drain.py  health.py  hybrid_backfill.py  logging_setup.py  macro_alerts.py  macro_ingest.py  migrate.py  notify.py  path_backfill.py  poller.py  rules.py  sector_backfill.py  storage.py  telegram_markup.py
chime/adapters/: __init__.py  cse.py  macro_cbsl.py  macro_eia.py
chime/briefs/: __init__.py  extract.py  local_fill.py  provider.py  worker.py
chime/extractors/: __init__.py  company_graph_pdf.py  cse_directors.py  cse_pdf_core.py  financial_pdf.py  people_pdf.py  person_aliases.py
chime/graph/: directors_sync.py  people_worker.py  resolve.py  worker.py
chime/metrics/: compare.py  worker.py
chime/ml/: always_on.py  backfill_outcomes.py  dataset.py  diagnose.py  forecast_serve.py  hpe.py  iterate.py  loop_nightly.py  loop_research.py  loop_retrain.py  ltr_dual.py  ltr_serve.py  outcomes.py  precision90.py  registry.py  symbol_gate.py
chime/signals/: forecast.py  job.py  score.py
cse-api-docs/: .gitignore  EXTRACT.md  LICENSE  README.md
cse-api-docs/catalog/: PROBE_REPORT.md  endpoints.yaml  last_probe.json
cse-api-docs/docs/: CHANGELOG.md
cse-api-docs/samples/: allSectors.json  announcements_legacy.json  approvedAnnouncement.json  aspiData.json  chartData.json  circularAnnouncement.json  companyChartDataByStock.json  companyInfoSummery.json  companyProfile.json  corporateAnnouncementCategory.json  dailyMarketSummery.json  daysTrade.json  detailedTrades.json  directiveAnnouncement.json  events.json  events_top.json  getAnnouncementByCompany.json  getAnnouncementById.json  getBuyInBoardAnnouncements.json  getCOVIDAnnouncements.json  getFinancialAnnouncement.json  getGeneralAnnouncementById.json  getNewListingsRelatedNoticesAnnouncements.json  getNonComplianceAnnouncements.json  marketStatus.json  marketSummery.json  mostActiveTrades.json  news_web.json  notifications.json  smd_categories.json  snpData.json  todaySharePrice.json  topGainers.json  topLooses.json  tradeSummary.json
cse-api-docs/scripts/: build_site.py  probe.py
cse-api-docs/site/: changelog.html  compare.html  ethics.html  examples.html  index.html  probe.html  websocket.html
db/: migrate.py
db/migrations/: 001_initial.sql  002_alert_log_attempts.sql  003_delivery_attempted_ok.sql  004_delivery_lease.sql  005_disclosure_briefs.sql  006_alert_rule_category.sql  007_brief_processing_status.sql  009_alert_log_deferred_attempts.sql  010_order_book_imbalance.sql  011_filing_metrics.sql  012_index_snapshots_and_prefs.sql  013_dash_session_sid.sql  022_hybrid_daily_bars.sql  023_price_snapshot_source.sql  024_company_graph.sql  025_company_people.sql  027_macro_context.sql  028_dividend_events.sql  029_user_digest_sent.sql  030_corporate_actions.sql  031_ops_job_status.sql  032_alert_types_h1.sql  033_user_locale.sql  034_habit_prefs_webhook.sql  035_issuer_profiles.sql
docs/: CSE_ANNOUNCEMENTS_VS_KOEL.md  CSE_API_DOCS_PROJECT.md  CSE_EXTERNAL_DOC_COMPARE.md  FINAL_REPORT.md  PASS1_AUDIT.md  PASS1_REPORT.md  PASS2_AUDIT.md  PASS2_REPORT.md  PASS3_AUDIT.md  PASS4_AUDIT.md  RESOURCES.md  THIRD_PARTY.md  THIRD_PARTY_DATA.md  activity_alerts.md  endpoint_probe_report.md
docs/adr/: 001-dash-auth.md
docs/brand/: ARDENO_STEAL_SHEET.md  ARDENO_UI_CATALOG.md  (+4 more)
koel/: __init__.py  __main__.py  alert_context.py  appetite.py  bot.py  bot_keyboards.py  channel_posts.py  config.py  corporate_actions.py  corporate_actions_backfill.py  digest.py  disclosures_backfill.py  dividends.py  domain.py  drain.py  feed_health.py  filing_categories.py  financials_backfill.py  hybrid_backfill.py  i18n.py  intraday_backfill.py  issuer_profile_backfill.py  logging_setup.py  macro_alerts.py  macro_ingest.py  migrate.py  nl_alerts.py  notices_backfill.py  notify.py  path_backfill.py  poller.py  rules.py  sector_backfill.py  stomp_ingest.py  storage.py
scripts/: coverage_filings_neon.py  cse_symbol_ui_loop.py  drain_graph_all_listed.py  drain_people_all_listed.py  financials_backfill_symbols.py  habit_features_loop.py  ml_daily_shadow.sh  ml_goal_a_wave2.sh  ml_goal_a_wave3.sh  ml_goal_a_wave4.sh  ml_hist_de_persist.sh  record_ui_walkthrough.mjs  seed_all_listed_graph_nodes.py  seed_company_graph.py  seed_gold_filing_metrics.py  sync_graph_local_to_target.py  tijori_smoke.sh  tv_port_improve_loop.py  ui_improve_loop.py  workbench_ui_loop.py
tests/: conftest.py  csrf_session_unit.mts  test_activity_bot_parse.py  test_activity_rules.py  test_adapters_circuit.py  test_adapters_cse_coverage.py  test_adapters_normalize.py  test_advisory_lock.py  test_ai_backup_failover.py  test_appetite.py  test_bot_command_responses.py  test_bot_coverage.py  test_bot_coverage_wave13.py  test_bot_digest_offer.py  test_bot_handlers.py  test_bot_health.py  test_bot_onboard_mute.py  test_bot_parse.py  test_bot_parse_h1_alerts.py  test_bot_rate_limit.py  test_bot_start_keyboard.py  test_brief_followup.py  test_brief_number_verify.py  test_briefs_extract.py  test_briefs_pdf_integration.py  test_briefs_provider.py  test_briefs_stub.py  test_channel_posts.py  test_circuit.py  test_claim_disarm.py  test_claim_disarm_txn.py  test_claim_mark_fail.py  test_claim_unsent_lease.py  test_company_graph_extract.py  test_company_graph_resolve.py  test_config_env.py  test_config_migrate_wave14.py  test_corporate_actions.py  test_cov_ratchet.py  test_coverage_wave15.py  (+241 more)
web/: .dockerignore  .env.example  .vade-report  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
(+746 files in other folders)
