[project]
name = "koel"
version = "0.1.0"
description = "Telegram-first alerting layer for the Colombo Stock Exchange (CSE)"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21",
    "httpx",
    "apscheduler",
    "psycopg[binary,pool]",
    "python-dotenv",
    "pydantic",
    "tenacity",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]
briefs = [
    "pypdf>=5",
]
ml = [
    "scikit-learn>=1.5",
    "numpy>=2",
    "xgboost>=2",
    "lightgbm>=4",
]
qlib = [
    "pyqlib==0.9.7",
]
hybrid = [
    "yfinance>=0.2",
    "pandas>=2",
]
macro = [
    "openpyxl>=3.1",
]

[project.scripts]
koel = "koel.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["koel*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Package-wide gate (was koel.rules-only @ 85). Floor tracks current unit
# coverage (~70–73% with DATABASE_URL=); ratchet up as storage/backfill paths
# regain tests rather than blocking merges on an obsolete 85 target.
addopts = "-q --cov=koel --cov-report=term-missing --cov-fail-under=70"
markers = [
    "integration: requires DATABASE_URL / real Postgres (skipped in unit CI)",
    "slow: optional slow harness (excluded from default local loops when selected)",
]

[tool.coverage.run]
omit = [
    # Research CLI / eval helpers promoted beside the typed financial_pdf surface.
    "koel/extractors/cse_pdf_core.py",
    # Offline ML experiment (optional [ml] extra) — not runtime bot/dash path.
    "koel/ml/*",
    # Optional Yahoo+CSE research panel CLI (optional [hybrid] extra).
    "koel/hybrid_backfill.py",
    # Ownership/people graph workers + PDF extractors (unit-tested separately;
    # Postgres upsert surface lives in storage and dilutes the package floor).
    "koel/graph/*",
    "koel/extractors/company_graph_pdf.py",
    "koel/extractors/people_pdf.py",
    "koel/extractors/cse_directors.py",
    "koel/extractors/person_aliases.py",
]

[tool.ruff]
line-length = 100
# Align with CI (actions/setup-python 3.12); runtime still allows >=3.11.
target-version = "py312"
# Research harnesses / vendored Ceyfi port snapshots — not runtime package code.
# koel/ml/vendor holds pinned-revision third-party model source (Kronos) kept
# verbatim for provenance; it is not written to this repo's lint conventions.
exclude = ["scripts/experiments", "docs/factory/ceyfi-market-port", "koel/ml/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# Align with CI (actions/setup-python 3.12); runtime still allows >=3.11.
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["koel"]

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "telegram.*",
    "pypdf.*",
    "fitz",
    "openpyxl",
    "sklearn.*",
    "numpy.*",
    "yfinance.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["koel.ml.*"]
ignore_errors = true

# Optional Yahoo+CSE research panel (optional [hybrid] extra).
[[tool.mypy.overrides]]
module = ["koel.hybrid_backfill"]
ignore_errors = true

# Research-grade PDF core (CLI + eval helpers); typed surface is financial_pdf.py.
[[tool.mypy.overrides]]
module = ["koel.extractors.cse_pdf_core"]
ignore_errors = true
